--- a/package.json
+++ b/package.json
@@ -40,19 +40,21 @@
     "@sidebase/nuxt-auth": "^0.3.3",
     "eslint": "^8.31.0",
     "nuxt": "3.0.0",
-    "prisma": "^4.8.0",
+    "prisma": "^4.9.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4",
     "vue-tsc": "^1.0.19"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.9.0",
     "@trpc/client": "^10.5.0",
     "@trpc/server": "^10.5.0",
     "pnpm": "^7.24.3",
     "superjson": "^1.12.1",
-    "trpc-nuxt": "^0.4.4",
+    "trpc-nuxt": "^0.5.0",
     "yarn-run-all": "^3.1.1",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "@tanstack/vue-query": "^4.19.1",
+    "@vueuse/core": "^9.6.0"
   }
 }
